# csp_ippc

./: README.md  meson.build  meson_options.txt
include/csp_pipeline_config/: pipeline_server.h  pipeline_slash.h
src/: module_config.pb-c.c  pipeline_config.pb-c.c  pipeline_server.c  pipeline_slash.c
